--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+
+  <!-- PWA / iOS fullscreen -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="theme-color" content="#000000">
+
+  <!-- Ikony aplikacji -->
+  <link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
+
   <title>App</title>
 
   <style>
@@ -18,6 +27,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      transition: background 0.05s;
     }
 
     .hidden { display: none; }
@@ -29,16 +39,11 @@
       padding: 20px;
     }
 
-    .container {
-      text-align: center;
-      z-index: 5;
-    }
+    .container { text-align: center; z-index: 5; }
 
     img {
-      width: 70vw;
-      max-width: 260px;
-      height: 70vw;
-      max-height: 260px;
+      width: 70vw; max-width: 260px;
+      height: 70vw; max-height: 260px;
       object-fit: cover;
       border-radius: 20px;
       box-shadow: 0 0 20px hotpink;
@@ -57,9 +62,7 @@
     .yes { background: hotpink; color: white; }
     .no { background: crimson; color: white; }
 
-    .final {
-      text-align: center;
-    }
+    .final { text-align: center; }
 
     .final img {
       border-radius: 50%;
@@ -85,7 +88,6 @@
       pointer-events: none;
       font-size: 22px;
     }
-
     .fx { animation: pop 1s ease-out forwards; }
     .heart { bottom: -20px; animation: floatUp 2s linear forwards; }
 
@@ -93,7 +95,6 @@
       0% { transform: scale(0); opacity: 1; }
       100% { transform: scale(2); opacity: 0; }
     }
-
     @keyframes floatUp {
       0% { transform: translateY(0); opacity: 1; }
       100% { transform: translateY(-120vh); opacity: 0; }
@@ -102,15 +103,15 @@
 </head>
 <body>
 
-  <!-- Ekran “neutralny” -->
+  <!-- Neutralny ekran (ukrywa niespodziankę w Safari) -->
   <div class="hint" id="hint">
     <p>Dodaj tę stronę do ekranu głównego i uruchom jak aplikację 📱</p>
     <p>(Safari → Udostępnij → Dodaj do ekranu początkowego)</p>
   </div>
 
-  <!-- Walentynka -->
+  <!-- Start walentynki (pokazuje się tylko w trybie standalone) -->
   <div class="container hidden" id="start">
-    <img src="https://picsum.photos/400">
+    <img src="https://picsum.photos/400" alt="Twoja walentynka">
     <h1>Czy zostaniesz moją walentynką? ❤️</h1>
     <div class="buttons">
       <button class="yes" onclick="answer('TAK')">TAK</button>
@@ -120,20 +121,27 @@
 
   <!-- Finał -->
   <div class="final hidden" id="final">
-    <img src="https://picsum.photos/400">
+    <img src="https://picsum.photos/400" alt="Twoja walentynka">
     <div class="final-text">KOCHAM CIĘ ❤️</div>
   </div>
 
+  <!-- Muzyka (podmień na swój plik obok HTML) -->
+  <audio id="loveSong" preload="auto" loop>
+    <source src="kocham-cie-robaczku.mp3" type="audio/mpeg">
+  </audio>
+
   <script>
+    // Telegram (opcjonalnie)
     const TELEGRAM_BOT_TOKEN = "TUTAJ_WKLEJ_TOKEN";
     const TELEGRAM_CHAT_ID = "TUTAJ_WKLEJ_ID_KANAŁU";
 
     function sendToTelegram(msg) {
+      if (!TELEGRAM_BOT_TOKEN || !TELEGRAM_CHAT_ID) return;
       fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ chat_id: TELEGRAM_CHAT_ID, text: msg })
-      });
+      }).catch(()=>{});
     }
 
     const isStandalone =
@@ -145,29 +153,33 @@
       document.getElementById("start").classList.remove("hidden");
     }
 
+    const rand = () => Math.floor(Math.random() * 255);
+
     function answer(value) {
       sendToTelegram("Walentynka odpowiedź: " + value);
 
       if (value === "NIE") {
+        // czyści wszystko
         document.body.innerHTML = "";
         document.body.style.background = "black";
         return;
       }
 
+      // pokaz finału
       document.getElementById("start").classList.add("hidden");
       document.getElementById("final").classList.remove("hidden");
 
-      setInterval(() => {
-        spawnFx("🎆");
-        spawnFx("✨");
-        spawnHeart();
-        document.body.style.background =
-          `rgb(${rand()}, ${rand()}, ${rand()})`;
-      }, 60);
-    }
+      // start muzyki po kliknięciu (iOS pozwala)
+      const song = document.getElementById("loveSong");
+      song.volume = 0.8;
+      song.play().catch(()=>{});
 
-    function rand() {
-      return Math.floor(Math.random() * 255);
+      // overkill efekty
+      setInterval(() => {
+        spawnFx(Math.random() > 0.5 ? "🎆" : "✨");
+        spawnHeart();
+        document.body.style.background = `rgb(${rand()}, ${rand()}, ${rand()})`;
+      }, 60);
     }
 
     function spawnFx(emoji) {
