--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
 
-  <title>KOCHAM CIE AMI</title>
+  <title>App</title>
 
   <style>
     body {
@@ -111,7 +111,7 @@
 
   <!-- Start walentynki (pokazuje się tylko w trybie standalone) -->
   <div class="container hidden" id="start">
-    <img src="https://picsum.photos/400" alt="Twoja walentynka">
+    <img src="https://drive.google.com/file/d/1Y9ts3dJWGx5deayhXOfoo4cZwWtccdb1/preview" alt="Twoja walentynka">
     <h1>Czy zostaniesz moją walentynką? ❤️</h1>
     <div class="buttons">
       <button class="yes" onclick="answer('TAK')">TAK</button>
@@ -122,7 +122,7 @@
   <!-- Finał -->
   <div class="final hidden" id="final">
     <img src="https://picsum.photos/400" alt="Twoja walentynka">
-    <div class="final-text">KOCHAM CIĘ ❤️</div>
+    <div class="final-text">KOCHAM CIĘ AMELKA❤️</div>
   </div>
 
   <!-- Muzyka (podmień na swój plik obok HTML) -->
@@ -132,8 +132,9 @@
 
   <script>
     // Telegram (opcjonalnie)
-    const TELEGRAM_BOT_TOKEN = "TUTAJ_WKLEJ_TOKEN";
-    const TELEGRAM_CHAT_ID = "TUTAJ_WKLEJ_ID_KANAŁU";
+    const TELEGRAM_BOT_TOKEN = "8207152521:AAGJuPABG8YAoa3JYDtIqe4jQrEof76xf3s";
+    const TELEGRAM_CHAT_ID = "-5198623711";
+
 
     function sendToTelegram(msg) {
       if (!TELEGRAM_BOT_TOKEN || !TELEGRAM_CHAT_ID) return;
