--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   <!-- Finał -->
   <div class="final hidden" id="final">
-    <img src="https://picsum.photos/400" alt="Twoja walentynka">
+    <img src="https://drive.google.com/file/d/1Y9ts3dJWGx5deayhXOfoo4cZwWtccdb1/preview" alt="Twoja walentynka">
     <div class="final-text">KOCHAM CIĘ AMELKA❤️</div>
   </div>
 
