--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
-  <!-- PWA / iOS fullscreen -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="theme-color" content="#000000">
 
-  <!-- Ikony aplikacji -->
   <link rel="apple-touch-icon" sizes="180x180" href="icon-180.png">
   <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="icon-512.png">
@@ -29,25 +26,56 @@
       justify-content: center;
       transition: background 0.05s;
     }
-
     .hidden { display: none; }
+    .hint { text-align:center; font-size:1.2rem; padding:20px; opacity:.9; }
+    .container { text-align:center; z-index:5; }
 
-    .hint {
-      text-align: center;
-      opacity: 0.9;
-      font-size: 1.2rem;
-      padding: 20px;
-    }
-
-    .container { text-align: center; z-index: 5; }
-
-    img {
+    img.start-photo {
       width: 70vw; max-width: 260px;
       height: 70vw; max-height: 260px;
       object-fit: cover;
       border-radius: 20px;
       box-shadow: 0 0 20px hotpink;
       margin-bottom: 16px;
+    }
+
+    /* --- SERCE NA ZDJĘCIU (FINAL) --- */
+    .heart-photo {
+      width: 70vw; max-width: 260px;
+      height: 70vw; max-height: 260px;
+      object-fit: cover;
+      filter: drop-shadow(0 0 25px hotpink);
+      -webkit-mask-image: url('data:image/svg+xml;utf8,\
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 29.6">\
+<path d="M23.6,0c-3.4,0-6.4,2.1-7.6,5.1C14.8,2.1,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4\
+c0,9.4,16,21.2,16,21.2s16-11.8,16-21.2C32,3.8,28.2,0,23.6,0z" fill="white"/>\
+</svg>');
+      -webkit-mask-size: contain;
+      -webkit-mask-repeat: no-repeat;
+      -webkit-mask-position: center;
+      mask-image: url('data:image/svg+xml;utf8,\
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 29.6">\
+<path d="M23.6,0c-3.4,0-6.4,2.1-7.6,5.1C14.8,2.1,11.8,0,8.4,0C3.8,0,0,3.8,0,8.4\
+c0,9.4,16,21.2,16,21.2s16-11.8,16-21.2C32,3.8,28.2,0,23.6,0z" fill="white"/>\
+</svg>');
+      mask-size: contain;
+      mask-repeat: no-repeat;
+      mask-position: center;
+      animation: pulse 1s infinite alternate;
+    }
+
+    .final-text {
+      font-size: 2.2rem;
+      margin-top: 10px;
+      letter-spacing: 3px;
+      text-shadow: 0 0 20px hotpink;
+      animation: pulse 1s infinite alternate;
+      text-align:center;
+    }
+
+    @keyframes pulse {
+      from { transform: scale(1); }
+      to { transform: scale(1.08); }
     }
 
     .buttons button {
@@ -58,60 +86,28 @@
       border: none;
       cursor: pointer;
     }
-
     .yes { background: hotpink; color: white; }
     .no { background: crimson; color: white; }
 
-    .final { text-align: center; }
-
-    .final img {
-      border-radius: 50%;
-      box-shadow: 0 0 30px hotpink;
-      animation: pulse 1s infinite alternate;
-    }
-
-    .final-text {
-      font-size: 2.2rem;
-      margin-top: 10px;
-      letter-spacing: 3px;
-      text-shadow: 0 0 20px hotpink;
-      animation: pulse 1s infinite alternate;
-    }
-
-    @keyframes pulse {
-      from { transform: scale(1); }
-      to { transform: scale(1.08); }
-    }
-
     .fx, .heart {
-      position: fixed;
-      pointer-events: none;
-      font-size: 22px;
+      position: fixed; pointer-events:none; font-size:22px;
     }
     .fx { animation: pop 1s ease-out forwards; }
-    .heart { bottom: -20px; animation: floatUp 2s linear forwards; }
+    .heart { bottom:-20px; animation: floatUp 2s linear forwards; }
 
-    @keyframes pop {
-      0% { transform: scale(0); opacity: 1; }
-      100% { transform: scale(2); opacity: 0; }
-    }
-    @keyframes floatUp {
-      0% { transform: translateY(0); opacity: 1; }
-      100% { transform: translateY(-120vh); opacity: 0; }
-    }
+    @keyframes pop { 0%{transform:scale(0);opacity:1} 100%{transform:scale(2);opacity:0} }
+    @keyframes floatUp { 0%{transform:translateY(0);opacity:1} 100%{transform:translateY(-120vh);opacity:0} }
   </style>
 </head>
 <body>
 
-  <!-- Neutralny ekran (ukrywa niespodziankę w Safari) -->
   <div class="hint" id="hint">
     <p>Dodaj tę stronę do ekranu głównego i uruchom jak aplikację 📱</p>
     <p>(Safari → Udostępnij → Dodaj do ekranu początkowego)</p>
   </div>
 
-  <!-- Start walentynki (pokazuje się tylko w trybie standalone) -->
   <div class="container hidden" id="start">
-    <img src="https://drive.google.com/file/d/1Y9ts3dJWGx5deayhXOfoo4cZwWtccdb1/preview" alt="Twoja walentynka">
+    <img class="start-photo" src="https://i.ibb.co/1xMSPtX/att-w-Pb7l-Qj-re-Ckqx2-RTu-Fl-WCd-at-Ny-Nf-RDia-Sz-DCt7-HBY.jpg" alt="Twoja walentynka">
     <h1>Czy zostaniesz moją walentynką? ❤️</h1>
     <div class="buttons">
       <button class="yes" onclick="answer('TAK')">TAK</button>
@@ -119,19 +115,16 @@
     </div>
   </div>
 
-  <!-- Finał -->
-  <div class="final hidden" id="final">
-    <img src="https://drive.google.com/file/d/1Y9ts3dJWGx5deayhXOfoo4cZwWtccdb1/preview" alt="Twoja walentynka">
-    <div class="final-text">KOCHAM CIĘ AMELKA❤️</div>
+  <div class="container hidden" id="final">
+    <img class="heart-photo" src="https://i.ibb.co/1xMSPtX/att-w-Pb7l-Qj-re-Ckqx2-RTu-Fl-WCd-at-Ny-Nf-RDia-Sz-DCt7-HBY.jpg" alt="Twoja walentynka">
+    <div class="final-text">KOCHAM CIĘ ❤️</div>
   </div>
 
-  <!-- Muzyka (podmień na swój plik obok HTML) -->
   <audio id="loveSong" preload="auto" loop>
     <source src="kocham-cie-robaczku.mp3" type="audio/mpeg">
   </audio>
 
   <script>
-    // Telegram (opcjonalnie)
     const TELEGRAM_BOT_TOKEN = "8207152521:AAGJuPABG8YAoa3JYDtIqe4jQrEof76xf3s";
     const TELEGRAM_CHAT_ID = "-5198623711";
 
@@ -160,22 +153,18 @@
       sendToTelegram("Walentynka odpowiedź: " + value);
 
       if (value === "NIE") {
-        // czyści wszystko
         document.body.innerHTML = "";
         document.body.style.background = "black";
         return;
       }
 
-      // pokaz finału
       document.getElementById("start").classList.add("hidden");
       document.getElementById("final").classList.remove("hidden");
 
-      // start muzyki po kliknięciu (iOS pozwala)
       const song = document.getElementById("loveSong");
       song.volume = 0.8;
       song.play().catch(()=>{});
 
-      // overkill efekty
       setInterval(() => {
         spawnFx(Math.random() > 0.5 ? "🎆" : "✨");
         spawnHeart();
